// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<Fragment>
  <When
    condition={true}
  >
    <Memo()
      customSearchbarClasses=""
      customclasses=""
      data-qa="table-toolbar"
      onsearchclear={[MockFunction]}
      onsearchinput={[MockFunction]}
      searchplaceholderlabel="Search..."
    />
  </When>
  <When
    condition={true}
  >
    <Memo()
      count={4}
      customClasses="tableTopPagination"
      data-qa="table-pagination"
      labelPaginationOf="of"
      labelRowsPerPage="Rows per page"
      onPageChange={[MockFunction]}
      onRowsPerPageChange={[MockFunction]}
      page={0}
      rowsPerPage={5}
      rowsPerPageOptions={
        Array [
          2,
          4,
          5,
          10,
        ]
      }
    />
  </When>
  <ForwardRef(Table)
    className="table"
    data-qa="table"
  >
    <ForwardRef(TableHead)
      className=""
      data-qa="table-header"
    >
      <ForwardRef(TableRow)
        className=""
        data-qa="table-header-row"
      >
        <Memo()
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "name",
            }
          }
          key="0"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo()
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "email",
            }
          }
          key="1"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo()
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "id",
              "numeric": true,
            }
          }
          key="2"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo()
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "isActionButtonCell": true,
              "label": "action",
            }
          }
          isActionButtonCell={true}
          key="3"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
      </ForwardRef(TableRow)>
    </ForwardRef(TableHead)>
    <ForwardRef(TableBody)
      className=""
      data-qa="table-body"
    >
      <ForwardRef(TableRow)
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo()
          content="Robin Hood"
        />
        <Memo()
          content="robin.hood@winked.com"
        />
        <Memo()
          content={23456789}
        />
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo()
          content="Darth Vader"
        />
        <Memo()
          content="darth.vader@thedeathstar.com"
        />
        <Memo()
          content={9876}
        />
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo()
          content="Kaladin Stormblessed"
        />
        <Memo()
          content="kaladin.stormblessed@thearmy.com"
        />
        <Memo()
          content={567890}
        />
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo()
          content="Steve Jobs"
        />
        <Memo()
          content="steve.jobs@apple.com"
        />
        <Memo()
          content={1}
        />
      </ForwardRef(TableRow)>
    </ForwardRef(TableBody)>
  </ForwardRef(Table)>
  <When
    condition={true}
  >
    <Memo()
      count={4}
      customClasses=""
      data-qa="table-pagination"
      labelPaginationOf="of"
      labelRowsPerPage="Rows per page"
      onPageChange={[MockFunction]}
      onRowsPerPageChange={[MockFunction]}
      page={0}
      rowsPerPage={5}
      rowsPerPageOptions={
        Array [
          2,
          4,
          5,
          10,
        ]
      }
    />
  </When>
</Fragment>
`;

exports[`Snapshot Testing Required Props 1`] = `
<Fragment>
  <When
    condition={true}
  >
    <Memo()
      customSearchbarClasses=""
      customclasses=""
      data-qa="table-toolbar"
      onsearchclear={[MockFunction]}
      onsearchinput={[MockFunction]}
      searchplaceholderlabel="Search..."
    />
  </When>
  <When
    condition={false}
  >
    <Memo()
      count={4}
      customClasses="tableTopPagination"
      data-qa="table-pagination"
      labelPaginationOf="of"
      labelRowsPerPage="Rows per page"
      onPageChange={[MockFunction]}
      onRowsPerPageChange={[MockFunction]}
      page={0}
      rowsPerPage={5}
      rowsPerPageOptions={
        Array [
          2,
          4,
          5,
          10,
        ]
      }
    />
  </When>
  <ForwardRef(Table)
    className="table"
    data-qa="table"
  >
    <ForwardRef(TableHead)
      className=""
      data-qa="table-header"
    >
      <ForwardRef(TableRow)
        className=""
        data-qa="table-header-row"
      >
        <Memo()
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "name",
            }
          }
          key="0"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo()
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "email",
            }
          }
          key="1"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo()
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "id",
              "numeric": true,
            }
          }
          key="2"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo()
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "isActionButtonCell": true,
              "label": "action",
            }
          }
          isActionButtonCell={true}
          key="3"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
      </ForwardRef(TableRow)>
    </ForwardRef(TableHead)>
    <ForwardRef(TableBody)
      className=""
      data-qa="table-body"
    >
      <ForwardRef(TableRow)
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo()
          content="Robin Hood"
        />
        <Memo()
          content="robin.hood@winked.com"
        />
        <Memo()
          content={23456789}
        />
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo()
          content="Darth Vader"
        />
        <Memo()
          content="darth.vader@thedeathstar.com"
        />
        <Memo()
          content={9876}
        />
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo()
          content="Kaladin Stormblessed"
        />
        <Memo()
          content="kaladin.stormblessed@thearmy.com"
        />
        <Memo()
          content={567890}
        />
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo()
          content="Steve Jobs"
        />
        <Memo()
          content="steve.jobs@apple.com"
        />
        <Memo()
          content={1}
        />
      </ForwardRef(TableRow)>
    </ForwardRef(TableBody)>
  </ForwardRef(Table)>
  <When
    condition={false}
  >
    <Memo()
      count={4}
      customClasses=""
      data-qa="table-pagination"
      labelPaginationOf="of"
      labelRowsPerPage="Rows per page"
      onPageChange={[MockFunction]}
      onRowsPerPageChange={[MockFunction]}
      page={0}
      rowsPerPage={5}
      rowsPerPageOptions={
        Array [
          2,
          4,
          5,
          10,
        ]
      }
    />
  </When>
</Fragment>
`;
